--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index,follow">
 
-  <title>Technology</title>
+  <title>Four card feature</title>
+  <meta name="description" content="A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.">
+
+  <meta property="og:url" content="https://mendez-v.github.io/four-card-feature/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Four card feature">
+  <meta property="og:description" content="A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.">
+  <meta property="og:image" content="https://raw.githubusercontent.com/mendez-v/four-card-feature/main/assets/image/thumbnail.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="mendez-v.github.io">
+  <meta property="twitter:url" content="https://mendez-v.github.io/four-card-feature/">
+  <meta name="twitter:title" content="Four card feature">
+  <meta name="twitter:description" content="A nice layout-based challenge for beginners. This will test anyone who is new to multi-column and responsive layouts.">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/mendez-v/four-card-feature/main/assets/image/thumbnail.png">
 
   <link rel="icon" href="./assets/icon/favicon.png">
   <link rel="apple-touch-icon" href="./assets/icon/favicon.png">
